--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,8 +2,8 @@
 	<html>
 		<head>
 			<title>{{ page.title }}</title>
-			<!-- link to main stylesheet -->
-			<link rel="stylesheet" type="text/css" href="/css/main.css">
+			<!-- link to main stylesheet 
+			<link rel="stylesheet" type="text/css" href="/css/main.css">-->
 		</head>
 		<body>
 			<nav>
