--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,11 +7,11 @@
 		<body>
 			<nav>
 	    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/setup">Setup</a></li>
-        		<li><a href="/lesson/intro">Lesson:Intro</a></li>
-        		<li><a href="/lesson/model">Lesson:Models</a></li>
-        		<li><a href="/lesson/network">Lesson:Network</a></li>
+        		<li><a href="/">QBI Software</a></li>
+	        	<li><a href="{{ site.github.repository_url }}/setup">Setup</a></li>
+        		<li><a href="{{ site.github.repository_url }}/lesson/intro">Lesson:Intro</a></li>
+        		<li><a href="{{ site.github.repository_url }}/lesson/model">Lesson:Models</a></li>
+        		<li><a href="{{ site.github.repository_url }}/lesson/network">Lesson:Network</a></li>
     		</ul>
 			</nav>
 			<div class="container">
