--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,6 @@
 {% include header.html %}
 <div class="container">
-<div class="md-col-2">{% include nav.html %}</div>
-<div class="md-col-10">	{{ content }} </div>
+<div class="col-md-2">{% include nav.html %}</div>
+<div class="col-md-10">	{{ content }} </div>
 </div><!-- /.container -->
 {% include footer.html %}
