--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,11 +32,11 @@
     </div>
 
     <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+    <div id="main_content" class="outer">
+   
         <div class="col-md-2">{% include nav.html %}</div>
         <div class="col-md-10">	{{ content }} </div>
-      </section>
+
     </div>
 
     <!-- FOOTER  -->
