--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,9 +31,10 @@
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
-   
+      <div class="col-md-3">{% include nav.html %}</div>
+      <section id="main_content" class="inner">{{ content }}</section>
 
-{{ content }}
+
     </div>
 
     <!-- FOOTER  -->
