--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
-      <div class="col-md-3">{% include nav.html %}</div>
+      <div class="col-md-3">{% include nav.md %}</div>
       <section id="main_content" class="inner">{{ content }}</section>
 
 
