--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,19 +19,12 @@
         <header class="inner">
           <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
           <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
-
-          {% if site.show_downloads %}
-            <section id="downloads">
-              <a class="zip_download_link" href="{{ site.github.zip_url }}">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="{{ site.github.tar_url }}">Download this project as a tar.gz file</a>
-            </section>
-          {% endif %}
         </header>
     </div>
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
-      <div class="col-md-3">{% include nav.md %}</div>
+      <div class="col-md-3">{% include nav.html %}</div>
       <section id="main_content" class="inner">{{ content }}</section>
 
 
