--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,7 +1,7 @@
 <ul class="nav nav-pills nav-stacked">
-  <li class="active"><a href="{{ site.url }}">Home</a></li>
-  <li><a href="{{ site.url }}/setup">Setup</a></li>
-  <li><a href="{{ site.url }}/lesson/intro">Intro</a></li>
-  <li><a href="{{ site.url }}/lesson/model">Simple Model</a></li>
-  <li><a href="{{ site.url }}/lesson/network">Simple Network</a></li>
+  <li class="active"><a href="index">Home</a></li>
+  <li><a href="setup">Setup</a></li>
+  <li><a href="lesson/intro">Intro</a></li>
+  <li><a href="lesson/model">Simple Model</a></li>
+  <li><a href="lesson/network">Simple Network</a></li>
 </ul>
