--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,7 +1,7 @@
 <ul class="nav nav-pills nav-stacked">
-  <li class="active"><a href="index">Home</a></li>
-  <li><a href="setup">Setup</a></li>
-  <li><a href="lesson/intro">Intro</a></li>
-  <li><a href="lesson/model">Simple Model</a></li>
-  <li><a href="lesson/network">Simple Network</a></li>
+  <li><a href="{{ site.github.repository_url }}/">Home</a></li>
+  <li><a href="{{ site.github.repository_url }}/setup">Setup</a></li>
+  <li><a href="{{ site.github.repository_url }}/lessons/intro">Intro</a></li>
+  <li><a href="{{ site.github.repository_url }}/lessons/model">Simple Model</a></li>
+  <li><a href="{{ site.github.repository_url }}/lessons/network">Simple Network</a></li>
 </ul>
