--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,6 @@
 <!--Navigation bar -->
 <ul class="nav nav-pills nav-stacked">
-{% for nav in site.data.nav %}
+{% for nav in site.data.nav.docs %}
   <li>
     <a href="https://github.com/{{ nav.url }}">
       {{ nav.title }}
