--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,7 +2,7 @@
 <ul class="nav nav-pills nav-stacked">
 {% for nav in site.data.nav.docs %}
   <li>
-    <a href="{{ site.url }}/{{ nav.url }}">
+    <a href="{{ site.url }}/NEURON-tutorial/{{ nav.url }}">
       {{ nav.title }}
     </a>
   </li>
