--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,9 @@
     <div id="main_content_wrap" class="outer">
       <div class="col-md-3">{% include nav.html %}</div>
       <section id="main_content" class="inner">{{ content }}</section>
-
+      {% if site.page.lesson %}
+      {% include paginator.html %}
+      {% endif %}
 
     </div>
 
