--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,7 +1,7 @@
 <!--Navigation bar -->
 <ul class="nav nav-pills nav-stacked">
 {% for nav in site.data.nav.docs %}
-  <li>
+  <li {% if nav.url == page.url %}class="active"{% endif %}>
     <a href="{{ site.url }}/NEURON-tutorial/{{ nav.url }}">
       {{ nav.title }}
     </a>
