--- a/_includes/paginator.html
+++ b/_includes/paginator.html
@@ -1,6 +1,7 @@
 <div class="paginator">
-{% assign back = site.data.nav.docs[page.lesson - 1] %}
-{% assign next = site.data.nav.docs[page.lesson + 1] %}
+{% assign num = page.lesson %}
+{% assign back = site.data.nav.docs[num - 1] %}
+{% assign next = site.data.nav.docs[num + 1] %}
 <a class="btn btn-default" href="{{ back.pagurl }}" title="{{ back.title }}">Back</a>
 <a class="btn btn-default" href="{{ next.pagurl }}" title="{{ next.title }}">Next</a>
 </div>
