--- a/_includes/paginator.html
+++ b/_includes/paginator.html
@@ -1,9 +1,11 @@
 <div class="paginator">
 {% assign num = page.lesson %}
   <span>num = {{num}}-1</span>
-  <span>lesson = {{page.lesson}}</span>
+ 
 {% assign back = site.data.nav.docs[{{ num }} - 1] %}
 {% assign next = site.data.nav.docs[{{ num }} + 1] %}
+   <span>back = {{back}}</span>
+   <span>back url = {{back}}.url</span>
 <a class="btn btn-default" href="{{ back.pagurl }}" title="{{ back.title }}">Back</a>
 <a class="btn btn-default" href="{{ next.pagurl }}" title="{{ next.title }}">Next</a>
 </div>
