--- a/_includes/paginator.html
+++ b/_includes/paginator.html
@@ -1,9 +1,9 @@
 <div class="paginator">
-{% assign num = page.lesson %}
-  <span>num = {{ num }}</span>
+{% assign num0 = decrement page.lesson %}
+{% assign num1 = increment page.lesson %}
  
-{% assign back = site.data.nav.docs[{% decrement num %}] %}
-{% assign next = site.data.nav.docs[{% increment num %}] %}
+{% assign back = site.data.nav.docs[num0] %}
+{% assign next = site.data.nav.docs[num1] %}
 
 <a class="btn btn-default" href="{{ back.pagurl }}" title="{{ back.title }}">Back</a>
 <a class="btn btn-default" href="{{ next.pagurl }}" title="{{ next.title }}">Next</a>
