--- a/_includes/paginator.html
+++ b/_includes/paginator.html
@@ -1,8 +1,8 @@
 <div class="paginator">
  <span>lesson = {{ page.lesson }}</span>
- <span> num-1 = {{page.lesson -1}}</span>
-{% assign back = site.data.nav.docs[page.lesson - 1] %}
-{% assign next = site.data.nav.docs[page.lesson + 1] %}
+ <span> num-1 = {{page.lesson}} -1</span>
+{% assign back = site.data.nav.docs[0] %}
+{% assign next = site.data.nav.docs[2] %}
 
 <a class="btn btn-default" href="{{ back.pagurl }}" title="{{ back.title }}">Back</a>
 <a class="btn btn-default" href="{{ next.pagurl }}" title="{{ next.title }}">Next</a>
