--- a/_includes/paginator.html
+++ b/_includes/paginator.html
@@ -1,9 +1,11 @@
 <div class="paginator">
- <span>lesson = {{ page.lesson }}</span>
- <span> num-1 = {{page.lesson}} -1</span>
-{% assign back = site.data.nav.docs[0] %}
-{% assign next = site.data.nav.docs[2] %}
+ 
+{% assign num0 = {{page.lesson | minus: 1}} %}
+{% assign num1 = {{page.lesson | plus: 1}} %}
+{% assign back = site.data.nav.docs[num0] %}
+{% assign next = site.data.nav.docs[num1] %}
 
 <a class="btn btn-default" href="{{ back.pagurl }}" title="{{ back.title }}">Back</a>
+| <span>Lesson {{ page.lesson }}</span> |
 <a class="btn btn-default" href="{{ next.pagurl }}" title="{{ next.title }}">Next</a>
 </div>
